// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ErrorPage renders with default props 1`] = `
<div class="ncf__wrapper ncf__center ncf__error-page">
  <div class="ncf__icon ncf__icon--error ncf__icon--large">
  </div>
  <div class="ncf__paragraph">
    <h1 class="ncf__header">
      Sorry, something went wrong
    </h1>
    <p id="error-message">
      Speak to our Customer Care team now so we can help.
    </p>
  </div>
  <div class="ncf__error-page__content">
    <div id="children">
      Children
    </div>
  </div>
  <div class="ncf__paragraph">
    <p>
      International Toll Free Number
    </p>
    <a id="error-international-number"
       class="ncf__header ncf__link"
       href="tel:+80007056477"
    >
      + 800 0705 6477
    </a>
  </div>
  <div class="ncf__paragraph">
    <a class="ncf__link"
       href="https://help.ft.com/help/contact-us/"
    >
      Find a local phone number
    </a>
  </div>
</div>
`;

exports[`ErrorPage renders with default props 2`] = `
<div class="ncf__wrapper ncf__center ncf__error-page">
  <div class="ncf__icon ncf__icon--error ncf__icon--large">
  </div>
  <div class="ncf__paragraph">
    <h1 class="ncf__header">
      Sorry, something went wrong
    </h1>
    <p id="error-message">
      Speak to our Customer Care team now so we can help.
    </p>
  </div>
  <div class="ncf__error-page__content">
    <div id="children">
      Children
    </div>
  </div>
  <div class="ncf__paragraph">
    <p>
      International Toll Free Number
    </p>
    <a id="error-international-number"
       class="ncf__header ncf__link"
       href="tel:+80007056477"
    >
      + 800 0705 6477
    </a>
  </div>
  <div class="ncf__paragraph">
    <a class="ncf__link"
       href="https://help.ft.com/help/contact-us/"
    >
      Find a local phone number
    </a>
  </div>
</div>
`;

exports[`ErrorPage renders with header 1`] = `
<div class="ncf__wrapper ncf__center ncf__error-page">
  <div class="ncf__icon ncf__icon--error ncf__icon--large">
  </div>
  <div class="ncf__paragraph">
    <h1 class="ncf__header">
      HEADER
    </h1>
    <p id="error-message">
      Speak to our Customer Care team now so we can help.
    </p>
  </div>
  <div class="ncf__error-page__content">
    <div id="children">
      Children
    </div>
  </div>
  <div class="ncf__paragraph">
    <p>
      International Toll Free Number
    </p>
    <a id="error-international-number"
       class="ncf__header ncf__link"
       href="tel:+80007056477"
    >
      + 800 0705 6477
    </a>
  </div>
  <div class="ncf__paragraph">
    <a class="ncf__link"
       href="https://help.ft.com/help/contact-us/"
    >
      Find a local phone number
    </a>
  </div>
</div>
`;

exports[`ErrorPage renders with header 2`] = `
<div class="ncf__wrapper ncf__center ncf__error-page">
  <div class="ncf__icon ncf__icon--error ncf__icon--large">
  </div>
  <div class="ncf__paragraph">
    <h1 class="ncf__header">
      HEADER
    </h1>
    <p id="error-message">
      Speak to our Customer Care team now so we can help.
    </p>
  </div>
  <div class="ncf__error-page__content">
    <div id="children">
      Children
    </div>
  </div>
  <div class="ncf__paragraph">
    <p>
      International Toll Free Number
    </p>
    <a id="error-international-number"
       class="ncf__header ncf__link"
       href="tel:+80007056477"
    >
      + 800 0705 6477
    </a>
  </div>
  <div class="ncf__paragraph">
    <a class="ncf__link"
       href="https://help.ft.com/help/contact-us/"
    >
      Find a local phone number
    </a>
  </div>
</div>
`;

exports[`ErrorPage renders with message 1`] = `
<div class="ncf__wrapper ncf__center ncf__error-page">
  <div class="ncf__icon ncf__icon--error ncf__icon--large">
  </div>
  <div class="ncf__paragraph">
    <h1 class="ncf__header">
      Sorry, something went wrong
    </h1>
    <p id="error-message">
      MESSAGE
    </p>
  </div>
  <div class="ncf__error-page__content">
    <div id="children">
      Children
    </div>
  </div>
  <div class="ncf__paragraph">
    <p>
      International Toll Free Number
    </p>
    <a id="error-international-number"
       class="ncf__header ncf__link"
       href="tel:+80007056477"
    >
      + 800 0705 6477
    </a>
  </div>
  <div class="ncf__paragraph">
    <a class="ncf__link"
       href="https://help.ft.com/help/contact-us/"
    >
      Find a local phone number
    </a>
  </div>
</div>
`;

exports[`ErrorPage renders with message 2`] = `
<div class="ncf__wrapper ncf__center ncf__error-page">
  <div class="ncf__icon ncf__icon--error ncf__icon--large">
  </div>
  <div class="ncf__paragraph">
    <h1 class="ncf__header">
      Sorry, something went wrong
    </h1>
    <p id="error-message">
      MESSAGE
    </p>
  </div>
  <div class="ncf__error-page__content">
    <div id="children">
      Children
    </div>
  </div>
  <div class="ncf__paragraph">
    <p>
      International Toll Free Number
    </p>
    <a id="error-international-number"
       class="ncf__header ncf__link"
       href="tel:+80007056477"
    >
      + 800 0705 6477
    </a>
  </div>
  <div class="ncf__paragraph">
    <a class="ncf__link"
       href="https://help.ft.com/help/contact-us/"
    >
      Find a local phone number
    </a>
  </div>
</div>
`;
